--- a/culture.html
+++ b/culture.html
@@ -102,7 +102,7 @@
     <div class="gallery">
 
         <div class="card" onclick="showText(1)">
-            <img src="media/culture1.jpg">
+            <img src="media/culture1.JPG">
             <div class="card-title">射箭</div>
         </div>
 
@@ -160,3 +160,4 @@ function showText(num) {
 
 </body>
 </html>
+
