--- a/language.html
+++ b/language.html
@@ -36,7 +36,7 @@
             height: 200px;
             object-fit: cover;
             display: block;
-            margin: 0 auto;      /* ✅ ВЫРАВНИВАНИЕ ПО ЦЕНТРУ */
+            margin: 0 auto;  
         }
         .lang-card:nth-child(1) img {
             object-position: center center;
@@ -76,7 +76,6 @@
 
     <div class="lang-grid">
 
-        <!-- ✅ 哈萨克语 -->
         <div class="lang-card" onclick="toggleLang(this)">
             <img src="media/kz.jpg">
             <div class="lang-title">哈萨克语（Kazakh）</div>
@@ -85,7 +84,6 @@
             </div>
         </div>
 
-        <!-- ✅ 俄语 -->
         <div class="lang-card" onclick="toggleLang(this)">
             <img src="media/ru.png">
             <div class="lang-title">俄语（Russian）</div>
@@ -94,7 +92,6 @@
             </div>
         </div>
 
-        <!-- ✅ 英语 -->
         <div class="lang-card" onclick="toggleLang(this)">
             <img src="media/us.png">
             <div class="lang-title">英语（English）</div>
@@ -122,3 +119,4 @@ function toggleLang(card){
 
 </body>
 </html>
+
