--- a/culture.html
+++ b/culture.html
@@ -13,7 +13,7 @@
             margin-top: 30px;
         }
         body {
-        overflow: auto !important;  /* ✅ ВКЛЮЧАЕТ ПРОКРУТКУ ТОЛЬКО ЗДЕСЬ */
+        overflow: auto !important; 
         }   
 
 
@@ -155,5 +155,6 @@ function showText(num) {
 
 </body>
 </html>
+
 
 
